# open-paper-trading-mcp

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  DOCKER_SETUP.md  Dockerfile  README.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml  start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: greet.yml  labeler.yml  release-drafter.yml  stale.yml
alembic/versions/: 004_add_client_intent_id_to_orders.py
app/: mcp_tools.py
app/adapters/: __init__.py  config.py  openbb.py
app/core/: config.py
app/integrations/: __init__.py
app/integrations/backtrader/: __init__.py  analyzer.py  order_intent.py  submitter.py
app/integrations/backtrader/tests/: test_collector.py  test_order_intent.py  test_submitter.py
app/llm/: __init__.py  provider.py
app/models/database/: trading.py
app/schemas/: orders.py
app/services/: trading_service.py
app/storage/: database.py
examples/google_adk_agent/: agent.py  prompts.py  requirements.txt  runner.py
frontend/src/: App.tsx  theme.ts  types.ts
frontend/src/components/: Layout.tsx  MarketHours.tsx  OrderHistory.tsx
frontend/src/contexts/: ColorModeContext.tsx
scripts/: init_db.py
tests/evals/: ADK-testing-evals.md  test_config.local.json  test_config.local_judge.json
tests/integration/: test_e2e_openbb_backtrader_hub.py  test_openbb_live_quote.py  test_synthetic_adapter_order_validation.py
tests/unit/: test_llm_provider.py
tests/unit/adapters/: test_openbb_quote_adapter.py
tests/unit/concurrency/: test_account_creation_concurrency.py
tests/unit/services/: test_trading_service_account_creation.py  test_trading_service_orders.py  test_trading_service_portfolio.py
