[project]
name = "open-paper-trading-mcp"
version = "0.1.0"
description = "Open Paper Trading MCP - A dual-interface paper trading simulation platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    { name = "Wes Etheredge", email = "jwesleye@gmail.com" }
]
keywords = ["trading", "paper-trading", "mcp", "simulation", "fastapi", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

# Minimal dependencies for MCP server functionality
dependencies = [
    # Core FastAPI and server dependencies
    "fastapi",
    "uvicorn[standard]",
    "pydantic[email]",
    "pydantic-settings",
    # Essential utilities
    "python-dotenv",
    "httpx",
    "aiohttp",
    # Database (minimal)
    "sqlalchemy",
    "asyncpg",
    "aiosqlite",
    "alembic",
    # Authentication
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    # Trading specific (keep minimal)
    "robin-stocks",
    "numpy",
    "scipy",
    "pytz",
    # System utilities
    "psutil",
    "toml",
    # Google API for ADK
    "google-api-python-client",
    "mcp==1.12.2",
    "fastmcp==2.7.0",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    # OpenBB superset env: makes `from openbb import obb` resolvable in the Hub's
    # uv environment so the OpenBB quote adapter (ADR 0002, phix/stockade#7) can
    # call into OpenBB in-process. yfinance is the zero-key default provider.
    "openbb>=4.4.0",
]

[project.urls]
Homepage = "https://github.com/Open-Agent-Tools/open-paper-trading-mcp"
Repository = "https://github.com/Open-Agent-Tools/open-paper-trading-mcp"
"Bug Tracker" = "https://github.com/Open-Agent-Tools/open-paper-trading-mcp/issues"
Documentation = "https://github.com/Open-Agent-Tools/open-paper-trading-mcp#readme"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "ruff",  # Replaces black, isort, flake8
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "reference_code*", "examples*"]

[tool.mypy]
python_version = "3.11"
exclude = [
    "reference_code/",
    "examples/",
    "scripts/load_user_profile.py",
    "tests/unit/concurrency/",
    "tests/integration/test_account_integration.py",
]
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "types-toml>=0.10.8.20240310",
]
